...
  "VERIFIED": "Verified",
  "Wednesday": "Wednesday",
  "about_now_vn": "About ShopeeFood",
  "about_restaurant": "About restaurant",
  "account": "Account",
...
  "back_to_homepage": "Back to Homepage",
  "back_to_top": "Back To Top",
  "bind": "Bind",
  "bind_account_can_use_shopee_coins": "Bind Shopee account to use Coins",
  "bind_account_to_get_x_coin_for_rating": "Bind Shopee account to get {} Shopee coins for this rating",
...
  "delivery_add_to_cart": "Add to Cart",
  "delivery_address_add_address_btn": "Add New Address",
  "delivery_address_add_home_address": "Add Home Address",
  "delivery_address_add_work_address": "Add Work Address",
  "delivery_address_address_label": "Address Label (Optional)",
  "delivery_address_address_label_home": "Home",
...
  "delivery_address_select_parking_fee": "Select Parking Fee",
  "delivery_address_set_pin_location_title": "Set a Pin Location",
  "delivery_address_title": "Delivery Address",
  "delivery_address_too_far_away": "The address is too far way to deliver, please select another address",
  "delivery_address_update": "Edit Address",
...
  "general_call_shipper": "Call Driver",
  "general_cancel": "Cancel",
  "general_cart": "Cart",
  "general_coin": "Coin",
  "general_coins": "Coins",
...
  "general_good": "Good",
  "general_group_order_type": "Group Order",
  "general_history": "History",
  "general_male": "Male",
  "general_message": "Message",
...
  "general_notification_sent": "Notification sent",
  "general_occupation": "Occupation",
  "general_ongoing": "Ongoing",
  "general_order": "Order",
  "general_order_code": "Order code",
...
  "header_sheis": "Sheis",
  "header_table_reservation": "Table Reservation",
  "help_center": "Help Center",
  "help_center_message": "Hi {0}, please contact us via our {1} if you have any problems with your order.",
  "help_center_message_delivery": "Hi {0}, Driver will see your message when we found you a Driver. If you need any support, please contact us via {1}!",
...
  "history_history_order": "History Order",
  "history_no_ongoing_order": "No Ongoing Order",
  "history_no_order": "No Order",
  "history_print_receipt": "Print Receipt",
  "history_status": "Status",
...
  "home_brand_see_all_outlets": "See all {0} outlets near you",
  "home_delivering_to": "Delivering to:",
  "home_delivery_to": "Deliver to:",
  "home_footer_intro_description1": "<p class=\"font15\">ShopeeFood will protect your purchase order from the weather by using bag or box during shipping.</p>",
  "home_footer_intro_description2": "<p class=\"font14\">- <b>ShopeeFood Merchant</b> là ứng dụng quản lý đơn hàng cho các nhà hàng đối tác của dịch vụ đặt món tận nơi </p><p class=\"font14\">\t- <b>ShopeeFood.vn</b> luôn sẵn sàng hợp tác với các nhà hàng, quán ăn, cafe... để mở rộng kinh doanh cũng như gia tăng khách hàng. Hãy kết nối vào hệ thống đặt và giao hàng để giảm bớt chi phí quản lý, vận
...
  "keep_waiting": "Keep waiting",
  "key_features": "KEY FEATURES",
  "key_updates": "Key Updates",
  "keyword": "keyword",
  "language_english": "English",
...
  "last_name": "Last Name",
  "last_order": "Last Order",
  "latest": "Latest",
  "lb_food": "FOOD",
  "lb_mobile": "Mobile",
...
  "login_with_password": "Log In with Password",
  "login_with_sms": "Log In with SMS",
  "logout": "Log Out",
  "maid_order_status_assigned_description": "Maid is coming soon...",
  "maid_order_status_assigned_text": "Assigned",
...
  "max_tip_description": "The maximum amount is 1,000,000đ and a multiple of 1,000đ",
  "me_about_now": "About ShopeeFood",
  "me_for_shop_owner": "For Shop Owners",
  "me_help_centre": "Help Centre",
  "me_invite_friend": "Invite Friends",
...
  "no_location_detected_desc": "Connection or Server Error. Please check your network connectivity and try again.",
  "no_member_make_with_order": "You have not ordered with anyone else, please copy Group link or Group code above and share with your friends.",
  "no_on_going_orders": "Have you ordered?",
  "no_on_going_orders_description": "Confirmed items which are currently being prepared and delivered will show up here so you can track your delivery!",
  "no_ratings": "No rating",
  "no_recent_orders": "No recent orders yet",
...
  "note_suggestion": "Suggestion",
  "notification": "Notification",
  "notification_news": "News",
  "notification_now_news": "News",
  "notification_now_news_no_data_content": "Notification will show up here.",
...
  "notification_now_popup_read_all_description": "Are you sure to mark all order updates as Read? This action cannot be undone.",
  "notification_now_popup_read_all_title": "Read All?",
  "notification_now_promotion": "Promotions",
  "notification_now_promotion_no_data_content": "Promotions will be available soon.",
  "notification_now_promotion_no_data_title": "Stay tuned!",
...
  "rebranding.likes_page_no_liked_place_text": "They say a full heart fills an empty stomach! Tap on the hearts to save your favourite places into Likes list!",
  "rebranding.likes_page_no_liked_place_title": "Give some love!",
  "rebranding.likes_tab_title": "Likes",
  "rebranding.link_app_android": "https://app.shopeefood.vn/uYaJ2yHv5hb",
  "rebranding.location_permission_off_desc": "Granting location permission will ensure accurate address and hassle-free delivery by our friendly Drivers.",
...
  "rebranding.no_result": "No matching result found.",
  "rebranding.note": "Note to Driver (optional)\n(e.g Deliver to doorstep, pick up outside, etc...)",
  "rebranding.notification": "Notification",
  "rebranding.out_of_distance": "Out of Delivery Distance",
  "rebranding.payment_topup_ib_detail": "Top Up ShopeeFood Credit",
...
  "search.filter": "Filter",
  "search.moreFilter": "More Filters",
  "search.nearby": "Nearby",
  "search.opening": "Opening",
  "search.relevant": "Relevant",
...
  "switch_city": "Switch to {}",
  "tab_back_to_top": "Back to Top",
  "tab_home_title": "Home",
  "tab_order_title": "My Orders",
  "tab_saved_title": "Saved",
...
  "title_register_merchant": "ShopeeFood Merchant for ShopeeFood.vn Merchant",
  "to": "To",
  "to_rate": "To Rate",
  "to_rate_empty_data_head": "No order to rate",
  "to_rate_empty_data_sub_title": "Wow, good job! All orders have been rated",
...
  "user_policy": "User Policy",
  "user_update_order_positive_message": "Thank you for using our service",
  "user_voucher_header": "My Voucher",
  "username": "Username",
  "valid_time_txt": "Valid Time",
...
